syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

option csharp_namespace = "BetService";

package bet;

service BetService {
	rpc CreateBet(CreateBetRequest) returns (CreateBetResponse);
	rpc CreateUserBet(CreateUserBetRequest) returns (CreateUserBetResponse);
	rpc GetBet(GetBetRequest) returns (GetBetResponse);
	rpc GetBets(GetBetsRequest) returns (GetBetsResponse);
	rpc GetUserBets(GetUserBetsRequest) returns (GetUserBetsResponse);
	rpc FinishBet(FinishBetRequest) returns (FinishBetResponse);
	rpc StopBet(StopBetRequest) returns (StopBetResponse);
}

enum Condition {
	CONDITION_NO = 0;
	CONDITION_YES = 1;
}

message Bet {
	int32 Id = 1;
	int32 AuthorId = 2;
	bool IsActive = 3;
	bool IsStopped = 4;
	string Message = 5;
	google.protobuf.Timestamp DateTime = 6;
	double Stake = 7;
}

message NullableBet {
	oneof kind {
		google.protobuf.NullValue Null = 1;
		Bet Bet = 2;
	}
}

message UserBet {
	int32 Id = 1;
	int32 UserId = 2;
	int32 BetId = 3;
	Condition Condition = 4;
	bool IsFinished = 5;
	bool IsActive = 6;
}

message NullableUserBet {
	oneof kind {
		google.protobuf.NullValue Null = 1;
		UserBet UserBet = 2;
	}
}

message CreateBetRequest {
	uint64 DiscordId = 1;
	string Message = 2;
	double Stake = 3;
}

message CreateBetResponse {
	bool Success = 1;
	string Message = 2;
	NullableBet BetValue = 3;
}

message CreateUserBetRequest {
	uint64 DiscordId = 1;
	int32 BetId = 2;
	Condition Condition = 3;
}

message CreateUserBetResponse {
	bool Success = 1;
	string Message = 2;
	NullableUserBet UserBetValue = 3;
}

message GetBetRequest {
	int32 BetId = 1;
}

message GetBetResponse {
	bool Success = 1;
	string Message = 2;
	NullableBet BetValue = 3;
}

message GetUserBetsRequest {
	oneof Id {
		int32 BetId = 1;
		int32 UserId = 2;
	}
}

message GetUserBetsResponse {
	bool Success = 1;
	string Message = 2;
	repeated UserBet UserBetList = 3;
}

message FinishBetRequest {
	int32 BetId = 1;
	uint64 DiscordId = 2;
	Condition Condition = 3;
}

message FinishBetResponse {
	bool Success = 1;
	string Message = 2;
}

message StopBetRequest {
	int32 BetId = 1;
	uint64 DiscordId = 2;
}

message StopBetResponse {
	bool Success = 1;
	string Message = 2;
}

message GetBetsRequest {
	bool ShowNotActive = 1;
}

message GetBetsResponse {
	bool Success = 1;
	string Message = 2;
	repeated Bet BetList = 3;
}